# C7_SmartCalc

./: CMakeLists.txt  Makefile  dogygen.config  mysuppressions.txt  readme.md
headers/: c_libs.h  chart.h  deposit_form.h  mainwindow.h
source/: c_libs.c  chart.cpp  credit.cpp  deposit_form.cpp  main.cpp  mainwindow.cpp
tests/: calculator_test.c  credit_test.c  deposit_tests.c  get_elem_type_test.c  polish_test.c  suete_brackets.c  suete_validator.c  test_main.c  test_main.h  utils_suite.c
ui/: chart.ui  credit.ui  deposit.ui.autosave  deposit_form.ui  mainwindow.ui
